--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body {
     color: #212121;
     -webkit-font-smoothing: antialiased;
     -mox-osx-font-smoothing: grayscale;
+    background: #fcf5e6;
 }
 
 ul {
@@ -161,6 +162,10 @@ ul > li {
     margin-left: -27px;
 }
 
+.products {
+    margin-bottom: 160px;
+}
+
 .products__item {
     width: 302px;
     height: 386px;
@@ -265,6 +270,10 @@ ul > li {
     color: #fff;
 }
 
+.collections {
+    margin-bottom: 135px;
+}
+
 .collections__list {
     display: flex;
 }
@@ -321,6 +330,138 @@ ul > li {
     font-size: 15px;
 }
 
+.collections__link:hover .btn {
+    background: var(--red);
+    color: #fff;
+    position: relative;
+    height: 100%;
+    box-sizing: border-box;
+}
+
 .collections__desc {
     margin-bottom: 28px;
+}
+
+.footer {
+    margin-bottom: 115px;
+}
+
+.footer__container {
+    width: 1105px;
+}
+
+.site-menu {
+    margin-bottom: 115px;
+}
+
+.site-menu__sections {
+    display: flex;
+    justify-content: space-between;
+}
+
+.site-menu__col {
+    margin-right: 20px;
+}
+
+.site-menu__col:last-child {
+    margin-right: 0;
+}
+
+.site-menu__item {
+    margin-bottom: 15px;
+}
+
+.site-menu__title {
+    font-family: var(--titlesFont);
+    font-size: 24px;
+    font-weight: bold;
+    color: var(--black);
+    text-transform: uppercase;
+    margin-bottom: 24px;
+}
+
+.site-menu__link {
+    margin-bottom: 15px;
+    font-size: 15px;
+    color: #737373;
+    text-decoration: none;
+}
+
+.site-menu__link:hover {
+    color: var(--red);
+}
+
+.site-menu__text {
+    font-size: 15px;
+    color: var(--black);
+    margin-bottom: 30px;
+}
+
+.site-menu__text-row {
+    color: inherit;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.extras {
+    display: flex;
+}
+
+.extras__col {
+    margin-right: 20px;
+    flex: 1;
+}
+
+.extras__col:last-child{
+    margin-right: 0;
+}
+
+.extras__best {
+    text-align: center;
+    color: #fff;
+    background: #232323;
+    font-size: 50px;
+    font-weight: bold;
+    font-family: var(--titlesFont);
+    text-transform: uppercase;
+    padding: 39px 10%;
+    text-decoration: none;
+    display: block;
+    line-height: 1;
+}
+
+.extras__col-socials {
+    height: 100%;
+    background: url('./images/bg/pattern.png') center center / 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.socials {
+    display: flex;
+}
+
+.socials__item {
+    margin-right: 50px;
+}
+
+.socials__item:last-child {
+    margin-right: 0;
+}
+
+.socials__link {
+    width: 38px;
+    height: 38px;
+    display: flex;
+}
+
+.socials__link:hover .socials__icon {
+    fill: var(--red);
+}
+
+.sozials__icon {
+    height: 100%;
+    width: 100%;
 }
