--- a/main.css
+++ b/main.css
@@ -64,11 +64,6 @@ ul > li {
     height: 72%;
 }
 
-.fade-slider {
-    height: 100%;
-    width: 100%;
-}
-
 .mail {
     text-decoration: none;
     text-align:center;
@@ -85,9 +80,59 @@ ul > li {
     padding: 5px 10px;
 }
 
-.fade-slider__item {
-    background: url('./images/content/hero/slider_pic_1.png') center center / contain no-repeat;
+.fade-slider {
     height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+.fade-slider__item {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: center center / contain no-repeat;
+}
+
+.fade-slider__item--visible {
+    opacity: 1;
+}
+
+.fade-slider__item--style-tshirts {
+    background-image: url('./images/content/hero/slider_pic_1.png');
+}
+
+.fade-slider__item--style-tshirts .lined-text {
+    align-items: flex-start;
+}
+
+.fade-slider__item--style-games {
+    background-image: url('./images/content/hero/slider_pic_2.png');
+}
+
+.fade-slider__item--style-games .fade-slider__text {
+    transform: translate(-50%, 85%);
+    text-align: center;
+    white-space: nowrap;
+}
+
+.fade-slider__item--style-games .lined-text {
+    align-items: center;
+}
+
+.fade-slider__item--style-gifts {
+    background-image: url('./images/content/hero/slider_pic_3.png');
+}
+
+.fade-slider__item--style-gifts .fade-slider__text {
+    transform: translate(-113%, 13%);
+    text-align: center;
+}
+
+.fade-slider__item--style-gifts .lined-text {
+    align-items: center;
 }
 
 .fade-slider__text {
@@ -104,7 +149,6 @@ ul > li {
     line-height: 1;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
 }
 
 .lined-text__word {
